# trivia

./: .gitmodules
C++/: .gitignore  CMakeLists.txt  build.sh
C++/cmake/: googletest-download.cmake
C++/include/: GameRunner.h
C++/lint/: misra-suppressions.lnt  output-aloa.lnt  output-default.lnt  output-jenkins.lnt  output.lnt  policy-suppressions.lnt  policy.lnt  project-safety-cpp-common.lnt  project.lnt  toolchain.h  toolchain.lnt
C++/src/: GameMain.cpp  GameRunner.cpp
C++/test/: GameRunnerTest.cpp  GameTest.cpp
kotlin/src/main/kotlin/com/adaptionsoft/games/trivia/runner/: GameRunner.kt
kotlin/src/main/kotlin/com/adaptionsoft/games/uglytrivia/: Game.kt
typescript/: game.spec.ts  game.ts
